--- a/main.css
+++ b/main.css
@@ -1,4 +1,4 @@
-@import url(arynrama.github.io/Aryntheme/src/server-list.css);
+/*@import url(arynrama.github.io/Aryntheme/src/server-list.css);*/
 
 #channels {
     background-color: black;
