--- a/base.css
+++ b/base.css
@@ -505,7 +505,7 @@
     background-color: transparent;
   }
   #app-mount .guilds-1SWlCJ .scrollerBase-289Jih {
-    background-color: rgba(0, 0, 0, var(--serverlist-brightness));
+    background-color: rgba(0, 0, 0, 0.5));
   }
   #app-mount .guilds-1SWlCJ .scrollerBase-289Jih::-webkit-scrollbar {
     display: none;
@@ -1624,6 +1624,7 @@
             box-sizing: border-box;
     z-index: 10;
   }
+  
   
   @-webkit-keyframes fadeIn {
     from {
