--- a/base.css
+++ b/base.css
@@ -505,7 +505,7 @@
     background-color: transparent;
   }
   #app-mount .guilds-1SWlCJ .scrollerBase-289Jih {
-    background-color: rgba(0, 0, 0, 0.5));
+    background-color: rgba(0, 0, 0, 0.5);
   }
   #app-mount .guilds-1SWlCJ .scrollerBase-289Jih::-webkit-scrollbar {
     display: none;
