--- a/main.css
+++ b/main.css
@@ -1,5 +1,17 @@
-/*@import url(arynrama.github.io/Aryntheme/src/server-list.css);*/
+/* This part causes the circular online status */
+@import url('https://discordstyles.github.io/RadialStatus/base.css');
 
-#channels {
-    background-color: black;
+:root {
+    --rs-small-spacing: 2px;
+    --rs-medium-spacing: 2px;
+    --rs-large-spacing: 2px;
+    --rs-small-width: 2px;
+    --rs-medium-width: 2.5px;
+    --rs-large-width: 2.5px;
+    --rs-avatar-shape: 50%;
+    --rs-online-color: #00ffffff;
+    --rs-idle-color: #ff5d00;
+    --rs-dnd-color: #ff0000;
+    --rs-offline-color: #003669;
+    --rs-streaming-color: #6f00ff;
 }
