--- a/main.css
+++ b/main.css
@@ -13,4 +13,6 @@
     --rs-avatar-shape: 50%;
     --HSL-server-icon-size: 42px;
     --HSL-server-spacing: 11px;
+    --HSL-size: 35px;
+    --HSL-spacing: 10px;
 }
