--- a/main.css
+++ b/main.css
@@ -1,5 +1,6 @@
 /* This part causes the circular online status */
 @import url('https://discordstyles.github.io/RadialStatus/base.css');
+@import url(arynrama.github.io/Aryntheme/base.css);
 :root {
     --rs-small-spacing: 2px;
     --rs-medium-spacing: 2px;
