--- a/main.css
+++ b/main.css
@@ -10,3 +10,36 @@
     --rs-large-width: 2.5px;
     --rs-avatar-shape: 50%;
 }
+
+:root {
+    --background-image: url(https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.pornhub.com%2Fgay%2Fvideo%2Fsearch%3Fsearch%3Dchastity&psig=AOvVaw0HJ6SohEYf7_yrWtE0FYM_&ust=1626898216065000&source=images&cd=vfe&ved=0CAgQjRxqFwoTCPDKpLq68vECFQAAAAAdAAAAABAG);
+    --background-image-blur: 0px;
+    --background-image-size: cover;
+    --background-image-position: center;
+    --popout-modal-image: transparent;
+    --popout-modal-blur: 27px;
+    --popout-modal-size: contain;
+    --popout-modal-position: center;
+    --home-button-size: contain;
+    --home-button-position: center;
+    --serverlist-brightness: 0.9;
+    --left-brightness: 0.68;
+    --middle-brightness: 0.44;
+    --right-brightness: 0.22;
+    --popout-modal-brightness: 0.76;
+    --gradient-primary: 255,0,0;
+    --gradient-secondary: 255,127,0;
+    --gradient-third: 255,255,0;
+    --gradient-fourth: 0,255,0;
+    --gradient-fifth: 0,0,255;
+    --gradient-six: 255,0,255;
+    --link-colour: #007F8B;
+    --scrollbar-colour: rgb(120,121,121,0.18);
+    --gradient-direction: 90deg;
+    --tint-colour: 0,0,0;
+    --tint-brightness: 0.2;
+    --window-padding: 2px;
+    --window-roundness: 0px;
+    --show-gift-gif-buttons: none;
+    --update-notice-1: none;
+}
