--- a/base.css
+++ b/base.css
@@ -1,4 +1,33 @@
 :root { 
+    --background-image-blur: 0px;
+    --background-image-size: cover;
+    --background-image-position: center;
+    --popout-modal-image: transparent;
+    --popout-modal-blur: 27px;
+    --popout-modal-size: contain;
+    --popout-modal-position: center;
+    --home-button-size: contain;
+    --home-button-position: center;
+    --serverlist-brightness: 0.9;
+    --left-brightness: 0.68;
+    --middle-brightness: 0.44;
+    --right-brightness: 0.22;
+    --popout-modal-brightness: 0.76;
+    --gradient-primary: 255,0,0;
+    --gradient-secondary: 255,127,0;
+    --gradient-third: 255,255,0;
+    --gradient-fourth: 0,255,0;
+    --gradient-fifth: 0,0,255;
+    --gradient-six: 255,0,255;
+    --link-colour: #007F8B;
+    --scrollbar-colour: rgb(120,121,121,0.18);
+    --gradient-direction: 90deg;
+    --tint-colour: 0,0,0;
+    --tint-brightness: 0.2;
+    --window-padding: 2px;
+    --window-roundness: 0px;
+    --show-gift-gif-buttons: none;
+    --update-notice-1: none;
     --TB-top: calc(var(--server-container) + var(--window-padding));
     --TB-tr-roundness: var(--window-roundness);
     --TB-position-top: var(--TB-top, var(--window-padding));
