--- a/src/base.css
+++ b/src/base.css
@@ -5,7 +5,7 @@
   --app-margin: 24px;
   --app-radius: 10px;
   --app-accent-image: none;
-  --app-accent-rgb: #0062ff;
+  --app-accent-rgb: rgb(100,100,100);
   --app-accent-opacity: 1;
   --app-accent-text: #000;
   --sidebar-color: rgba(0,0,0,0.4);
